--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ html, body {
 
 /* Body & Background */
 body {
-  background-image: url(fotot/Untitled.jpg);
+  background-image: url(blurred-background-vibrant-campus-scene-600nw-2527446029.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
