--- a/index.css
+++ b/index.css
@@ -200,26 +200,29 @@ input:checked + .slider:before {
   display: none;
   width: 35px;
   height: 30px;
+
   flex-direction: column;
   justify-content: space-between;
-  cursor: pointer;
+
   background: none;
   border: none;
-  padding: 0;
-  margin-left: 20px;
+  cursor: pointer;
+
+  margin-left: auto; 
+
   z-index: 1001;
 }
 
 .hamburger span {
-  display: block;
+  display: flex;
   height: 4px;
   width: 100%;
+  justify-content: space-between;
   background-color: #2652c0;
   border-radius: 2px;
   transition: all 0.3s ease;
 }
 
-body.dark .hamburger span { background-color: #a3bffa; }
 
 .hamburger.active span:nth-child(1) { transform: rotate(45deg) translate(8px,8px); }
 .hamburger.active span:nth-child(2) { opacity: 0; transform: translateX(20px); }
@@ -327,9 +330,9 @@ main.hero {
 .hero-content h1 {
   font-size: 3.5rem;
   font-weight: 800;
-  background: linear-gradient(135deg, #2652c0, #1ee9c0);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  background-color: #033151;
+  /*background: linear-gradient(135deg, #033151);*/
+  color: #36454F;
   background-clip: text;
   margin-bottom: 1.5rem;
   line-height: 1.2;
@@ -337,7 +340,9 @@ main.hero {
 
 .hero-content p {
   font-size: 1.2rem;
-  color: #666;
+  color: whitesmoke;
+  background-color: #033151;
+  border-radius: 50px;
   margin-bottom: 2.5rem;
   max-width: 600px;
   margin-left: auto;
@@ -363,7 +368,7 @@ body.dark .hero-content p { color: #bbb; }
   width: 100%;
   height: 300px;
   text-align: center;
-  transition: transform 0.6s;
+  transition: transform 1.6s;
   transform-style: preserve-3d;
 }
 
